service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: feature1-namespace
spec:
  selector:
    app: service-a
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
